--- a/site/src/_includes/base.njk
+++ b/site/src/_includes/base.njk
@@ -125,10 +125,10 @@
           </div>
           <div class="col-lg-3 col-md-6">
             <div class="site-footer-widget">
-              <h5 class="site-footer-widget-title">Contact Info</h5>
+              <h5 class="site-footer-widget-title">{{footer.contactsHeading}}</h5>
               <p class="site-footer-widget-description">
               {% for contactInfo in footer.contactsInfo %}
-                <a href="{{contactInfo.link}}">{{contactInfo.text}}</a>
+                <a href="{{contactInfo.link}}" target="_blank">{{contactInfo.text}}</a>
                 <br>
               {% endfor %}
               </p>
@@ -151,7 +151,7 @@
               <h5 class="site-footer-widget-title">{{footer.socialHeading}}</h5>
               <ul class="site-footer-widget-links">
                 {% for socialMedia in footer.socialMedia %}
-                <li><a href="/{{socialMedia.link}}">{{socialMedia.text}}</a></li>
+                <li><a href="{{socialMedia.link}}">{{socialMedia.text}}</a></li>
                 {% endfor %}
               </ul>
             </div>
@@ -177,7 +177,7 @@
           </div>
           <div class="col-12">
             <div class="site-footer-copyright text-center my-3">
-              <p>© Copyright 2022 - All Rights Reserved by <a href="https://staticmania.com/" target="_blank">StaticMania</a> </p>
+              <p>© 2022 Ochirsaikhan | ♥ Powered by <a href="https://staticmania.com/" target="_blank">StaticMania</a> </p>
             </div>
           </div>
         </div>
