--- a/site/src/_includes/layouts/homepage.njk
+++ b/site/src/_includes/layouts/homepage.njk
@@ -13,7 +13,7 @@
                 <br>
                 {{hero.title.secondPara}}
               </h1>
-              <ul class="site-hero-content-buttons">
+              {# <ul class="site-hero-content-buttons">
                 <li>
                   <a href="{{hero.seeWorkBtn.link}}" class="btn btn-secondary scroll-to">
                     <span class="btn-area">
@@ -32,7 +32,7 @@
                     </span>
                   </a>
                 </li>
-              </ul>
+              </ul> #}
             </div>
           </div>
         </div>
