--- a/site/assets/css/style.css
+++ b/site/assets/css/style.css
@@ -104,11 +104,11 @@ h6 {
 }
 
 .btn-primary {
-  background: #EAA4A4;
+  background: #5f3694;
   color: #fff;
 }
 .btn-primary:hover {
-  background: #e07b7b;
+  background: #f3b045;
 }
 
 .btn-secondary {
@@ -133,6 +133,7 @@ body {
   }
 }
 .section-title h2 {
+  color:#f3b045;
   font-weight: 300;
   letter-spacing: 2px;
   text-transform: uppercase;
@@ -194,7 +195,6 @@ textarea.form-control {
 .site-navigation {
   padding: 20px 0;
   /* background: #fff; */
-  background: #f3b045;
   position: fixed;
   top: 0;
   width: 100%;
@@ -230,13 +230,14 @@ textarea.form-control {
 }
 .site-navigation .nav-item .nav-link {
   font-family: "Montserrat", sans-serif;
-  color: #00113E;
+  /* font-weight: 600; */
+  color: white;
   transition: all 0.3s ease;
   padding: 15px 18px;
   position: relative;
 }
 .site-navigation .nav-item .nav-link:hover {
-  color: #27452a;
+  color: #f3b045;
 }
 .site-navigation .nav-item:last-child {
   margin-left: 15px;
@@ -393,9 +394,12 @@ textarea.form-control {
   position: relative;
   margin-bottom: 30px;
   transition: all 0.3s ease-in;
+  padding-bottom: 160px;
 }
 .site-project-item-thumb img, .site-blog-post-thumb img {
   width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 .site-project-item-content, .site-blog-post-content {
   position: absolute;
