--- a/site/src/_includes/layouts/homepage.njk
+++ b/site/src/_includes/layouts/homepage.njk
@@ -5,14 +5,22 @@
     <section class="site-hero">
       <div class="container">
         <div class="row">
-          <div class="col-lg-10 mx-auto">
+          <div class="col-lg-10">
             <div class="site-hero-content">
+              <a class="good-button" href="#">
+                ABOUT ME
+                <span class="button-arrow">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 476.213 476.213"><path d="M405.606 167.5l-21.212 21.213 34.393 34.393H0v30h418.787L384.394 287.5l21.212 21.213 70.607-70.607" fill="#fff"></path></svg>
+                </span>
+              </a>
               <h6>{{hero.subTitle}}</h6>
+              <span class="separator"></span>
+              <span class="separator"></span>
               <h1>
                 {{hero.title.firstPara}}
                 <br>
                 {{hero.title.secondPara}}
-              </h1>
+              </h1> 
               {# <ul class="site-hero-content-buttons">
                 <li>
                   <a href="{{hero.seeWorkBtn.link}}" class="btn btn-secondary scroll-to">
