--- a/site/src/_includes/base.njk
+++ b/site/src/_includes/base.njk
@@ -36,9 +36,9 @@
   {% block navbar %}
     <nav class="navbar navbar-expand-lg site-navigation">
       <div class="container">
-        <a class="navbar-brand" href="/">
+        {# <a class="navbar-brand" href="/">
           <img src="{{nav.navLogo}}" alt="nav-logo" />
-        </a>
+        </a> #}
         <button
           class="navbar-toggler collapsed"
           type="button"
