--- a/site/src/_includes/layouts/homepage.njk
+++ b/site/src/_includes/layouts/homepage.njk
@@ -7,7 +7,7 @@
         <div class="row">
           <div class="col-lg-10">
             <div class="site-hero-content">
-              <a class="good-button" href="#">
+              <a class="good-button" href="/about">
                 ABOUT ME
                 <span class="button-arrow">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 476.213 476.213"><path d="M405.606 167.5l-21.212 21.213 34.393 34.393H0v30h418.787L384.394 287.5l21.212 21.213 70.607-70.607" fill="#fff"></path></svg>
@@ -45,9 +45,9 @@
           </div>
         </div>
       </div>
-      <a href="#counter" class="site-hero-scroll scroll-to">
+      {# <a href="#counter" class="site-hero-scroll scroll-to">
         <img src="/assets/images/arrow-down.svg" alt="arrow-down">
-      </a>
+      </a> #}
     </section>
 
     {# <section class="site-counter" id="counter">
