--- a/site/src/_includes/base.njk
+++ b/site/src/_includes/base.njk
@@ -4,6 +4,10 @@
     <title>Ochirsaikhan Davaajambal | Portfolio</title>
     <meta charset="utf-8" />
     <meta name="generator" content="Eleventy">
+    <meta name="description" content="Ochirsaikhan's portfolio website | I'm an aspiring software engineer and 
+    computer science student currently studying at Allegheny College. I'm passionate about developing maintainable
+    and sustainable software using the latest technology to solve problems and make people's lives easier.">
+    <meta name="author" content="Ochirsaikhan Davaajambal">
 
     <!-- mobile responsive meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -28,6 +32,8 @@
     <!--Favicon-->
     <link rel="shortcut icon" href="/assets/images/favIcon.png" type="image/x-icon" />
     <link rel="icon" href="/assets/images/favIcon.png" type="image/x-icon" />
+
+    
   </head>
 
   <body>
