--- a/site/src/_includes/base.njk
+++ b/site/src/_includes/base.njk
@@ -33,7 +33,15 @@
     <link rel="shortcut icon" href="/assets/images/favIcon.png" type="image/x-icon" />
     <link rel="icon" href="/assets/images/favIcon.png" type="image/x-icon" />
 
-    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-47HH6ZMGTD"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-47HH6ZMGTD');
+    </script>
   </head>
 
   <body>
